Fixed the overlapping

--- a/src/pages/Homepage/homepage.css
+++ b/src/pages/Homepage/homepage.css
@@ -6,7 +6,7 @@
 .main-container{
     background: url("../../images/Poster.png");
     background-size: cover;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     object-fit: cover;
     
